@@ -40,7 +40,7 @@
    <property name="testLayerProperty" value="SUCCESS"/>
   </properties>
   <data encoding="base64" compression="zlib">
-   eJxjYBhcYCmRarCpWwbFhACx6ogBABiCBIg=
+   eJxjYBhcYBkDgwMRahqA+AEW8QVAfIAI/SCcQIbzMAAAsLUH6w==
   </data>
  </layer>
  <objectgroup name="Objects">
