@@ -1,4 +1,5 @@
 [1.6.2-SNAPSHOT]
+- Added support for rotated + flipped tiles
 - Added TiledObject#getProperties method
 
 [1.6.1]
